@@ -1,2 +1,2 @@
-EBUILD cl-wireless-meta-10.9-r1.ebuild 817 RMD160 6307ea4b9dbfb8188688c6cae025b4f7b96890d5 SHA1 085dd778af9eac76c7475136ae1fa4d21223fc12 SHA256 3733c92b80ac725ec3ace6eeabd00a5f257583a9a1c09d856d5d0be93091c07f
-MISC ChangeLog 1477 RMD160 8cd3b6f6bc4d119bdf9ec590393710f03646a005 SHA1 03e9fbf236a00d898dfba3895b0e31bca22dbc33 SHA256 785157796b94d94c9b6d6e350511aa8d1c4bec1d11d32e8d15f4fdb5ce62e8cd
+EBUILD cl-wireless-meta-10.9-r2.ebuild 917 RMD160 cd831f027fbc120854f0cb771171258d8a01b6c1 SHA1 32019de8901057da4da8404226e2a9465ceba9b9 SHA256 492288d3734d5c25ee946d079ff929145d369b96b20cb3c36157be9ed54d2504
+MISC ChangeLog 1701 RMD160 7216f48897b48045858189d34e33e5ea25109f04 SHA1 a43c097fb14cc45fdd14955944acd6c74ae3fa16 SHA256 cf03bbacd62a5a2422311db7921d1f0158499af4e240f29620fe15ad197036b7
