@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-wireless-meta-10.9-r2 (26 Dec 2010)
+
+  26 Dec 2010; Трацевский Александр <alex@gentoo.org>
+  -cl-wireless-meta-10.9-r1.ebuild, +cl-wireless-meta-10.9-r2.ebuild:
+  Added net-wireless/bluedevil for CLD
+
 *cl-wireless-meta-10.9-r1 (23 Nov 2010)
 
   23 Nov 2010; Трацевский Александр <alex@gentoo.org>
